--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
+  gen_annotation:
+    git:
+      url: https://github.com/Order-of-Runes/gen_annotation.git
+      ref: 0.0.2
+  google_fonts: ^8.0.1
+  konsumer_core:
+    git:
+      url: https://github.com/TheMakersPrime/konsumer_core.git
+      ref: main
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  gen:
+    git:
+      url: https://github.com/Order-of-Runes/gen.git
+      ref: 0.0.11
   very_good_analysis: ^10.1.0
 
 flutter:
