--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
     git:
       url: https://github.com/TheMakersPrime/konsumer_core.git
       ref: main
+  material_symbols_icons: ^4.2906.0
   shared_preferences: ^2.5.4
   url_launcher: ^6.3.2
 
